@@ -1,4 +1,4 @@
-dnl $Id: configure.ac 74600 2025-03-13 06:41:42Z mseven $
+dnl $Id: configure.ac 74615 2025-03-14 06:27:27Z mseven $
 dnl Process this file with autoconf to produce a configure script.
 dnl
 dnl   Copyright 2016-2025 Karl Berry <tex-live@tug.org>
@@ -8,7 +8,7 @@ dnl   This file is free software; the copyright holder
 dnl   gives unlimited permission to copy and/or distribute it,
 dnl   with or without modifications, as long as this notice is preserved.
 dnl
-AC_INIT([dvipdfm-x (TeX Live)], [20250313], [dvipdfmx@tug.org])
+AC_INIT([dvipdfm-x (TeX Live)], [20250314], [dvipdfmx@tug.org])
 AC_PREREQ([2.65])
 AC_CONFIG_SRCDIR([agl.c])
 AC_CONFIG_AUX_DIR([../../build-aux])
